除了第一页和最后一页

--- a/web/templates/exp06.html
+++ b/web/templates/exp06.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>提交不公平样本</title>
 
-  <!-- Mobile Specific Metas
+    <!-- Mobile Specific Metas
 ================================================== -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Construction Html5 Template">
@@ -19,7 +20,7 @@
     <!-- element-ui 引入样式 -->
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 
-        <!-- ============== js ================= -->
+    <!-- ============== js ================= -->
     <!-- vue.js -->
     <script src="../static/js/vue.js"></script>
 
@@ -29,133 +30,132 @@
     <!-- element-ui 组件库 -->
     <!-- 引入组件库 -->
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-    
-    
+
+
 </head>
 
 <body>
-<div class="body-inner" id="app">
-    
-    <el-container>
-        <!-- Header -->
-        <el-header>
-            <h4>欢迎进入公平性审计实验</h4>
-        </el-header>
-        
-        <!-- Main -->
-        <el-main>
-            <div class="task-area">
-                <div class="task-title">
+    <div class="body-inner" id="app">
 
-                </div>
-                <div class="task-content">
-                    <div class="task-content-form">
-                        <div class="task-form-area">
-                            <el-row>
-                                <el-col :span="18">
-                                    <div class="task-form-title">
-                                        <h2>审计报告</h2>
-                                    </div>
-                                    <div class="form-card">
-                                        <p>在xxx数据范围中，根据[[xxx]]的公平性准则，发现不公平样本对如下：</p>
-                                        <div class="card-text">
-{#                                            <div v-if="inFairnessPairs.length === 0">没有不公平的样本对</div>#}
-                                            <div>
-                                                <el-row>
-                                                    <el-col :span="12">
-                                                        <el-descriptions title="数据1" :column="2">
-                                                            <el-descriptions-item v-for="(value, key) in form1" :key="key" :label="getLabel(key)">
-                                                                [[ formatValue(key,value) ]]
-                                                            </el-descriptions-item>
-                                                        </el-descriptions>
-                                                    </el-col>
-                                                    <el-col :span="12">
-                                                        <el-descriptions title="数据2" :column="2">
-                                                            <el-descriptions-item v-for="(value, key) in form2" :key="key" :label="getLabel(key)">
-                                                                [[ formatValue(key,value) ]]
-                                                            </el-descriptions-item>
-                                                        </el-descriptions>
-                                                    </el-col>
-                                                </el-row>
+        <el-container>
+            <!-- Header -->
+            <el-header>
+                <h4>欢迎进入公平性审计实验</h4>
+            </el-header>
 
+            <!-- Main -->
+            <el-main>
+                <div class="task-area">
+                    <div class="task-title">
+
+                    </div>
+                    <div class="task-content">
+                        <div class="task-content-form">
+                            <div class="task-form-area">
+                                <el-row>
+                                    <el-col :span="18">
+                                        <div class="task-form-title">
+                                            <h2>审计报告</h2>
+                                        </div>
+                                        <div class="form-card" v-loading="loading" element-loading-text="正在生成审计报告，大概需要一分钟~"
+                                        element-loading-spinner="el-icon-loading"
+                                        element-loading-background="rgba(255, 255, 255, 0.4)">
+                                            <p>在xxx数据范围中，根据[[xxx]]的公平性准则，发现不公平样本如下：</p>
+                                            <div class="card-text">
+                                                {# <div v-if="inFairnessPairs.length === 0">没有不公平的样本对</div>#}
+                                                <div>
+                                                    <el-row>
+                                                        <el-col :span="12">
+                                                            <el-descriptions title="数据1" :column="2">
+                                                                <el-descriptions-item v-for="(value, key) in form1"
+                                                                    :key="key" :label="getLabel(key)">
+                                                                    [[ formatValue(key,value) ]]
+                                                                </el-descriptions-item>
+                                                            </el-descriptions>
+                                                        </el-col>
+                                                        <el-col :span="12">
+                                                            <el-descriptions title="数据2" :column="2">
+                                                                <el-descriptions-item v-for="(value, key) in form2"
+                                                                    :key="key" :label="getLabel(key)">
+                                                                    [[ formatValue(key,value) ]]
+                                                                </el-descriptions-item>
+                                                            </el-descriptions>
+                                                        </el-col>
+                                                    </el-row>
+
+                                                </div>
                                             </div>
+                                            <div>
+                                                <p>经进一步审计,该对样本附近,模型的个体公平性为[[ old_individual_fairness
+                                                    ]]，低于模型在总体数据上的公平性表现[[ globalFairness ]]</p>
+
+                                                <p>模型优化建议：采用[[optimization]]的优化方法</p>
+                                                <br>
+                                                <p>优化完成后预计的公平性表现预计为：[[ new_individual_fairness ]]</p>
+                                            </div>
+
                                         </div>
-                                        <div v-loading="loading"
-                                            element-loading-text="正在计算结果，大概需要一分钟~"
-                                            element-loading-spinner="el-icon-loading"
-                                            element-loading-background="rgba(255, 255, 255, 0.4)"
-                                        >
-                                            <p>经进一步审计,该对样本附近,模型的个体公平性为[[ old_individual_fairness ]]，低于模型在总体数据上的公平性表现"先待定"</p>
+                                    </el-col>
 
-                                            <p>模型优化建议：采用[[optimization]]的优化方法</p>
-                                            <br>
-                                            <p>优化完成后预计的公平性表现预计为：[[ new_individual_fairness ]]</p>
-                                        </div>
+                                    <el-col :span="6">
 
-                                    </div>
-                                </el-col>
-
-                                <el-col :span="6">
-
-                                </el-col>
-                            </el-row>
+                                    </el-col>
+                                </el-row>
+                            </div>
                         </div>
                     </div>
+
+                    <div class="button-area">
+                        <a href="/">
+                            <el-button type="warning" @click="exit">结束</el-button>
+                        </a>
+                    </div>
                 </div>
+            </el-main>
 
-                <div class="button-area">
-                    <a href="/">
-                        <el-button type="warning"  @click="exit">结束</el-button>
-                    </a>
-                </div>
-            </div>
-        </el-main>
+        </el-container>
 
-    </el-container>
-
-</div>
+    </div>
 
     <!-- 创建Vue对象 -->
-     <script>
-          axios.get('/api/csrf/').then(response => {
-              axios.defaults.headers.common['X-CSRFToken'] = response.data.csrfToken;
-            });
+    <script>
+        axios.get('/api/csrf/').then(response => {
+            axios.defaults.headers.common['X-CSRFToken'] = response.data.csrfToken;
+        });
 
         new Vue({
-            el:"#app",
-            delimiters:["[[", "]]"],
-            data(){
-                return{
+            el: "#app",
+            delimiters: ["[[", "]]"],
+            data() {
+                return {
                     loading: false,
-                    inFairnessPairs:[],
-                    fairness:'公平',
-                    optimization:'xxx',
-                    old_individual_fairness:'be loading...',
-                    new_individual_fairness:'be loading...',
-                    globalFairness:'0.6773',
+                    inFairnessPairs: [],
+                    fairness: '公平',
+                    optimization: 'xxx',
+                    old_individual_fairness: 'be loading...',
+                    new_individual_fairness: 'be loading...',
+                    globalFairness: '',
                     form1: {
-                        'age': 63,
-                        'capital-gain': 87,
-                        'capital-loss': 1787,
-                        'education-num': 1,
-                        'hours-per-week': 17,
-                        'race_White': 1,
-                        'sex_Male': 0,
-                        'marital-status': 'Widowed',
-                        'workclass': 'Private'
-
+                        'age': '',
+                        'capital-gain': '',
+                        'capital-loss': '',
+                        'education-num': '',
+                        'hours-per-week': '',
+                        'race_White': '',
+                        'sex_Male': '',
+                        'marital-status': '',
+                        'workclass': ''
                     },
                     form2: {
-                        age: 45,
-                        'capital-gain': 500,
-                        'capital-loss': 0,
-                        'education-num': 10,
-                        'hours-per-week': 40,
-                        'race_White': 0,
-                        'sex_Male': 1,
-                        'marital-status': 'Married-civ-spouse',
-                        'workclass': 'Self-emp-inc'
-
+                        'age': '',
+                        'capital-gain': '',
+                        'capital-loss': '',
+                        'education-num': '',
+                        'hours-per-week': '',
+                        'race_White': '',
+                        'sex_Male': '',
+                        'marital-status': '',
+                        'workclass': ''
                     },
                     labels: {
                         'age': '年龄',
@@ -185,38 +185,38 @@
                         { value: 'Self-emp-not-inc', label: '自雇（收入一般）' },
                         { value: 'State-gov', label: '州政府雇员' },
                         { value: 'Without-pay', label: '无报酬' }
-                      ]
+                    ]
                 };
             },
             created() {
                 this.fetchData();
             },
-            computed:{
+            computed: {
 
             },
-            methods:{
-                getLabel(key){
+            methods: {
+                getLabel(key) {
                     return this.labels[key] || key;
                 },
-                formatValue(key, value){
-                    if(key === "race_White"){
+                formatValue(key, value) {
+                    if (key === "race_White") {
                         return value === 1 ? '白人' : '非白人';
-                    }else if (key === 'sex_Male') {
+                    } else if (key === 'sex_Male') {
                         return value === 1 ? '男性' : '女性';
-                      } else if (key === 'marital-status') {
+                    } else if (key === 'marital-status') {
                         return this.getOptionLabel(this.maritalStatusOptions, value);
-                      } else if (key === 'workclass') {
+                    } else if (key === 'workclass') {
                         return this.getOptionLabel(this.workclassOptions, value);
-                      } else {
+                    } else {
                         return value;
-                      }
+                    }
                 },
                 getOptionLabel(options, value) {
                     const option = options.find(option => option.value === value);
                     return option ? option.label : value;
                 },
-                fetchData(){
-                    this.loading=true;
+                fetchData() {
+                    this.loading = true;
                     console.log('进入前，loading = ' + this.loading);
                     axios.get("/api/exp06/").then(response => {
                         this.form1 = response.data.unfair_pair[0];
@@ -225,22 +225,23 @@
                         this.new_individual_fairness = response.data.new_individual_fairness.toFixed(4);
                         console.log(this.old_individual_fairness);
                         console.log(this.new_individual_fairness);
+                        this.globalFairness = 0.6773
                         this.loading = false;
                         console.log('加载完成，loading = ' + this.loading);
 
-                    }) .catch(error => {
+                    }).catch(error => {
                         console.error("There was an error fetching the data:", error);
                         this.loading = false;  // 即使发生错误，也需要设置 loading 为 false
                     });
                 },
-                exit(){
+                exit() {
                     alert("结束！")
                 }
             }
         })
 
 
-     </script>
+    </script>
 </body>
 
 </html>
